Really bypass the constructor